--- a/package.json
+++ b/package.json
@@ -37,11 +37,8 @@
         "access": "public"
     },
     "dependencies": {
-        "cac": "^6.7.14",
-        "defu": "^6.1.4",
-        "find-up": "^8.0.0",
-        "glob": "^13.0.0",
-        "jiti": "^2.6.1"
+        "citty": "^0.2.0",
+        "ofetch": "^1.5.1"
     },
     "devDependencies": {
         "@antfu/eslint-config": "^6.7.3",
