feat(cli): Add organization name checking

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "access": "public"
     },
     "dependencies": {
+        "@clack/prompts": "^0.11.0",
         "citty": "^0.2.0",
         "ofetch": "^1.5.1"
     },
